--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>PWA学习</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-
+<h1 class="title">hello PWA</h1>
+<img class="face" src="https://tcly861204.github.io/images/face.jpg" />
+<h2 class="user">wtc</h2>
 </body>
 </html>
