--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h2 class="user">wtc</h2>
 <script>
   if('ServiceWorker' in window){
-    navigator.serviceWorker.register('/pwa/js/sw.js')
+    navigator.serviceWorker.register('/pwa/sw.js')
       .then(function(reg){
         console.log('注册成功'+reg.scope);
       })
