--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <h1 class="title">hello PWA</h1>
-<img class="face" src="https://tcly861204.github.io/images/face.jpg" />
+<img class="face" src="img/face.jpg" />
 <h2 class="user">wtc</h2>
 <script>
   if('ServiceWorker' in window){
