--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-<h1 class="title">hello PWA</h1>
+<h1 class="title">HELLO PWA</h1>
 <img class="face" src="img/face.jpg" />
 <h2 class="user">wtc</h2>
 <script>
