--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>PWA学习</title>
   <link rel="stylesheet" href="css/main.css">
+  <link rel="manifest" href="json/manifest.json" />
 </head>
 <body>
 <h1 class="title">HELLO PWA</h1>
