--- a/index.html
+++ b/index.html
@@ -88,17 +88,39 @@
           console.log('注册失败');
         });
     }
-    if (window.Notification) {
-      var notification = new Notification("Hi，帅哥：", {
-          body: '可以加你为好友吗？',
-          icon: '/pwa/img/icon_120.png'
-      });
+    notifyMe();
+    function notifyMe() {
+      // 先检查浏览器是否支持
+      if (!("Notification" in window)) {
+        alert("This browser does not support desktop notification");
+      }
 
-      notification.onclick = function() {
-          text.innerHTML = '张小姐已于' + new Date().toTimeString().split(' ')[0] + '加你为好友！';
-          notification.close();
-      };
-    }
+      // 检查用户是否同意接受通知
+      else if (Notification.permission === "granted") {
+        // If it's okay let's create a notification
+        var notification = new Notification("Hi，帅哥：", {
+              body: '可以加你为好友吗？',
+              icon: '/pwa/img/icon_120.png'
+          });
+      }
+
+      // 否则我们需要向用户获取权限
+      else if (Notification.permission !== 'denied') {
+        Notification.requestPermission(function (permission) {
+          // 如果用户同意，就可以向他们发送通知
+          if (permission === "granted") {
+            var notification = new Notification("Hi，帅哥：", {
+              body: '可以加你为好友吗？',
+              icon: '/pwa/img/icon_120.png'
+          });
+          }
+        });
+      }
+
+
+      // 最后，如果执行到这里，说明用户已经拒绝对相关通知进行授权
+      // 出于尊重，我们不应该再打扰他们了
+  }
   </script>
 </body>
 </html>
