--- a/index.html
+++ b/index.html
@@ -83,6 +83,21 @@
       navigator.serviceWorker.register('/pwa/sw.js')
         .then(function(reg){
           console.log('注册成功'+reg.scope);
+          var title = 'PWA即学即用';
+          var options = {
+              body: '邀请你一起学习',
+              icon: '/pwa/img/icon_120.png',
+              actions: [{
+                  action: 'show-book',
+                  title: '去看看'
+              }, {
+                  action: 'contact-me',
+                  title: '联系我'
+              }],
+              tag: 'pwa-starter',
+              renotify: true
+          };
+          registration.showNotification(title, options);
         })
         .catch(function(error){
           console.log('注册失败');
