--- a/index.html
+++ b/index.html
@@ -83,59 +83,44 @@
       navigator.serviceWorker.register('/pwa/sw.js')
         .then(function(reg){
           console.log('注册成功'+reg.scope);
-          var title = 'PWA即学即用';
-          var options = {
-              body: '邀请你一起学习',
-              icon: '/pwa/img/icon_120.png',
-              actions: [{
-                  action: 'show-book',
-                  title: '去看看'
-              }, {
-                  action: 'contact-me',
-                  title: '联系我'
-              }],
-              tag: 'pwa-starter',
-              renotify: true
-          };
-          registration.showNotification(title, options);
         })
         .catch(function(error){
           console.log('注册失败');
         });
     }
-    notifyMe();
-    function notifyMe() {
-      // 先检查浏览器是否支持
-      if (!("Notification" in window)) {
-        alert("This browser does not support desktop notification");
-      }
+  //   notifyMe();
+  //   function notifyMe() {
+  //     // 先检查浏览器是否支持
+  //     if (!("Notification" in window)) {
+  //       alert("This browser does not support desktop notification");
+  //     }
 
-      // 检查用户是否同意接受通知
-      else if (Notification.permission === "granted") {
-        // If it's okay let's create a notification
-        var notification = new Notification("Hi，帅哥：", {
-              body: '可以加你为好友吗？',
-              icon: '/pwa/img/icon_120.png'
-          });
-      }
+  //     // 检查用户是否同意接受通知
+  //     else if (Notification.permission === "granted") {
+  //       // If it's okay let's create a notification
+  //       var notification = new Notification("Hi，帅哥：", {
+  //             body: '可以加你为好友吗？',
+  //             icon: '/pwa/img/icon_120.png'
+  //         });
+  //     }
 
-      // 否则我们需要向用户获取权限
-      else if (Notification.permission !== 'denied') {
-        Notification.requestPermission(function (permission) {
-          // 如果用户同意，就可以向他们发送通知
-          if (permission === "granted") {
-            var notification = new Notification("Hi，帅哥：", {
-              body: '可以加你为好友吗？',
-              icon: '/pwa/img/icon_120.png'
-          });
-          }
-        });
-      }
+  //     // 否则我们需要向用户获取权限
+  //     else if (Notification.permission !== 'denied') {
+  //       Notification.requestPermission(function (permission) {
+  //         // 如果用户同意，就可以向他们发送通知
+  //         if (permission === "granted") {
+  //           var notification = new Notification("Hi，帅哥：", {
+  //             body: '可以加你为好友吗？',
+  //             icon: '/pwa/img/icon_120.png'
+  //         });
+  //         }
+  //       });
+  //     }
 
 
-      // 最后，如果执行到这里，说明用户已经拒绝对相关通知进行授权
-      // 出于尊重，我们不应该再打扰他们了
-  }
+  //     // 最后，如果执行到这里，说明用户已经拒绝对相关通知进行授权
+  //     // 出于尊重，我们不应该再打扰他们了
+  // }
   </script>
 </body>
 </html>
