--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@
       navigator.serviceWorker.register('/pwa/sw.js')
         .then(function(reg){
           console.log('注册成功'+reg.scope);
+          // 请求订阅
+          serviceWorkerRegistration.pushManager.subscribe({userVisibleOnly: true})
+          .then(function(subscription) {
+            isPushEnabled = true;
+            pushButton.textContent = 'Disable Push Messages';
+            pushButton.disabled = false;
+            return sendSubscriptionToServer(subscription);
+          })
+
         })
         .catch(function(error){
           console.log('注册失败');
